@@ -6,6 +6,11 @@ Summary of important user-visible changes for image 2.0.1:
     colormarp is used on the colorbar for indexed images; and the stems no
     longer display the markers at their top.
 
+ ** The `fftconv2' usage "fftconv2 (v1, v2, a)", for convolution of a matrix by
+    one vector in the column direction and another vector in the row direction,
+    will issue a warning as is not working correctly. It has been removed from
+    the documentation.
+
 Summary of important user-visible changes for image 2.0.0:
 -------------------------------------------------------------------
 
